# Y-Scale-DSP-Solution

./: .gitignore  Cargo.toml  LICENSE  README.md
configs/: graphic-eq.toml  passthrough.toml  two-way-speaker.toml
crates/yscale-cli/: Cargo.toml
crates/yscale-cli/src/: main.rs
crates/yscale-dsp/: Cargo.toml
crates/yscale-dsp/examples/: pipeline.rs
crates/yscale-dsp/src/: bass.rs  biquad.rs  crossover.rs  delay.rs  eq.rs  fft.rs  fir.rs  lib.rs  limiter.rs  matrix.rs  pipeline.rs  strip.rs  verify.rs
crates/yscale-engine/: Cargo.toml
crates/yscale-engine/src/: alsa_out.rs  analyzer.rs  config.rs  control.rs  engine.rs  lib.rs  output.rs  source.rs
crates/yscale-server/: Cargo.toml
crates/yscale-server/src/: firs.rs  main.rs  player.rs  presets.rs  volume.rs
deploy/: deploy-web.sh  deploy.sh  setup-dlna.sh  yscale-server.service  yscale.service
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  main.js  style.css
web/src/components/: BassPanel.vue  ChannelStrip.vue  CrossoverPanel.vue  EqCurve.vue  FirPanel.vue  GraphicEq.vue  MasterMeters.vue  NowPlaying.vue  ParametricEq.vue  PlayerSources.vue  PresetBar.vue  RoutingPanel.vue  SourceBar.vue  Spectrum.vue  Toast.vue  VolumeBar.vue
web/src/composables/: useDspApi.js
web/src/lib/: dsp.js  util.js
