[package]
name = "yscale-cli"
description = "Headless command-line runner for the Y-Scale-DSP audio engine."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "yscale"
path = "src/main.rs"

[dependencies]
yscale-engine = { path = "../yscale-engine", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ctrlc = "3"
