[package]
name = "yscale-server"
description = "Web server for Y-Scale-DSP: axum REST + WebSocket live control, serving the Vue UI."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "yscale-server"
path = "src/main.rs"

[dependencies]
yscale-dsp = { workspace = true }
yscale-engine = { path = "../yscale-engine", version = "0.1.0" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"
